--- a/apps/sandbox/package.json
+++ b/apps/sandbox/package.json
@@ -3,12 +3,12 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "astro": "astro",
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro",
     "sweep": "rm -rf .astro",
+    "preview": "astro preview",
     "format": "prettier --write ."
   },
   "dependencies": {
@@ -18,9 +18,10 @@
     "@astrojs/svelte": "^3.1.1",
     "@astrojs/tailwind": "^4.0.0",
     "@astrojs/vue": "^2.2.1",
+    "@ph-badge/react": "workspace:^",
     "@radix-ui/react-icons": "^1.3.0",
     "astro": "^2.10.12",
-    "ph-badge-react": "workspace:^",
+    "classnames": "^2.3.2",
     "preact": "^10.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
