--- a/apps/sandbox/package.json
+++ b/apps/sandbox/package.json
@@ -18,7 +18,7 @@
     "@astrojs/svelte": "^3.1.1",
     "@astrojs/tailwind": "^4.0.0",
     "@astrojs/vue": "^2.2.1",
-    "@ph-badge/react": "workspace:^",
+    "@ph-badge/react": "1.0.0",
     "@radix-ui/react-icons": "^1.3.0",
     "astro": "^2.10.12",
     "classnames": "^2.3.2",
