--- a/apps/sandbox/package.json
+++ b/apps/sandbox/package.json
@@ -17,10 +17,11 @@
     "@astrojs/solid-js": "^2.2.1",
     "@astrojs/svelte": "^3.1.1",
     "@astrojs/tailwind": "^4.0.0",
+    "@astrojs/vercel": "^3.8.2",
     "@astrojs/vue": "^2.2.1",
-    "@ph-badge/react": "1.0.0",
+    "@ph-badge/react": "1.0.1",
     "@radix-ui/react-icons": "^1.3.0",
-    "astro": "^2.10.12",
+    "astro": "^2.10.14",
     "classnames": "^2.3.2",
     "preact": "^10.17.1",
     "react": "^18.2.0",
@@ -33,8 +34,8 @@
     "vue": "^3.3.4"
   },
   "devDependencies": {
-    "@types/react": "^18.2.20",
+    "@types/react": "^18.2.21",
     "prettier": "^3.0.2",
-    "prettier-plugin-astro": "^0.11.1"
+    "prettier-plugin-astro": "^0.12.0"
   }
 }
