--- a/apps/sandbox/package.json
+++ b/apps/sandbox/package.json
@@ -12,29 +12,30 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "@astrojs/mdx": "^1.1.0",
-    "@astrojs/react": "^3.0.2",
-    "@astrojs/solid-js": "^3.0.1",
-    "@astrojs/svelte": "^4.0.2",
-    "@astrojs/tailwind": "^5.0.0",
-    "@astrojs/vercel": "^5.0.0",
-    "@astrojs/vue": "^3.0.0",
+    "@astrojs/mdx": "^1.1.1",
+    "@astrojs/react": "^3.0.3",
+    "@astrojs/solid-js": "^3.0.2",
+    "@astrojs/svelte": "^4.0.3",
+    "@astrojs/tailwind": "^5.0.1",
+    "@astrojs/vercel": "^5.0.2",
+    "@astrojs/vue": "^3.0.1",
     "@ph-badge/react": "1.0.1",
     "@radix-ui/react-icons": "^1.3.0",
-    "astro": "^3.1.0",
+    "astro": "^3.2.3",
     "classnames": "^2.3.2",
-    "preact": "^10.17.1",
+    "preact": "^10.18.1",
     "react": "^18.2.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
     "rehype-pretty-code": "^0.10.1",
     "shiki": "^0.14.4",
-    "solid-js": "^1.7.11",
-    "svelte": "^4.2.0",
+    "solid-js": "^1.7.12",
+    "svelte": "^4.2.1",
     "tailwindcss": "^3.3.3",
     "vue": "^3.3.4"
   },
   "devDependencies": {
-    "@types/react": "^18.2.21",
+    "@types/react": "^18.2.25",
     "prettier": "^3.0.3",
     "prettier-plugin-astro": "^0.12.0"
   }
